src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;

    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;

    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;

    --border: 240 5.9% 50%;
        --input: 240 5.9% 50%;

    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;

    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;

    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;

    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --info: 204 94% 94%;
    --info-foreground: 199 89% 48%;

    --success: 149 80% 90%;
    --success-foreground: 160 84% 39%;

    --warning: 48 96% 89%;
    --warning-foreground: 25 95% 53%;

    --error: 0 93% 94%;
    --error-foreground: 0 84% 60%;

    --ring: 240 5.9% 10%;

    --radius: 0.5rem;
  }

  .dark,
  [data-kb-theme="dark"] {
    --background: 240 10% 7%;
    --foreground: 0 0% 98%;

    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;

    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;

    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;

    --border: 240 3.7% 33.9%;
    --input: 240 3.7% 15.9%;

    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;

    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;

    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;

    --info: 204 94% 94%;
    --info-foreground: 199 89% 48%;

    --success: 149 80% 90%;
    --success-foreground: 160 84% 39%;

    --warning: 48 96% 89%;
    --warning-foreground: 25 95% 53%;

    --error: 0 93% 94%;
    --error-foreground: 0 84% 60%;

    --ring: 240 4.9% 83.9%;

    --radius: 0.5rem;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
    font-feature-settings:
      "rlig" 1,
      "calt" 1;
  }
}

@media (max-width: 640px) {
  .container {
    @apply px-4;
  }
}

* {
    font-family: "Atkinson Hyperlegible", system-ui, sans-serif;
}
a {
    /*text-decoration: underline;*/
}

.facet-navigation-item svg {
    display: inline-block;
    margin-right: 0.7em;
}
.post-content p:not(:first-child) {
  margin-top: 1em;
}
.post-content p:not(:last-child) {
  margin-bottom: 1em;
}
.post-content * {
    overflow-wrap: anywhere;
    }
    
    .post-content a {
        text-decoration: underline;
}
#layoutColumnsRoot {
    display: grid;
    width: 100%;
    max-width: 76rem;

    grid-template-columns: auto;
    /* The first grid item should only occupy the minimum height needed, it could be a user profile or maybe empty space */
        grid-template-rows: min-content auto;
    grid-auto-flow: columns;
    overflow: hidden;
    margin: auto;
}

#editorRoot {
    display: grid;
    height: 100%;
    grid-template-rows: 50% 50%;
}

#editorEditor {
    grid-row: span 2;
}

#editorShareTarget {
    overflow: auto;
    margin: 0.5rem;
    padding: 0.5rem;
}
@media (min-width: 768px) {
    #layoutColumnsRoot {
        grid-template-columns: 18rem auto;
        /* The sidebar is shown so we want the single remaining row to take the full height */
            grid-template-rows: auto;
    }

    #layoutMainColumn {
        padding: 0.25rem;
    }
}

@media (min-width: 1024px) {
    #layoutMainColumn {
        padding: 0.5rem;
    }
}

@media (min-width: 1280px) {
    #layoutMainColumn {
        padding: 1.5rem;
    }
}
#layoutColumnsRoot {
    flex: 1 1 auto;
}

/* Singular left column that may contain blocks. Stacks above main column if the viewport is too narrow */
#layoutLeftColumn {}

#layoutMainColumn {
    min-height: 100%;
}

#root {
    min-height: 100vh;
}
#notifications-facet {
    display: grid;
    width: 100%;

    padding: 0.5rem;

    grid-template-columns: auto;
    grid-template-rows: repeat(auto);
    grid-auto-flow: columns;
    row-gap: 0.5rem;
    overflow: hidden;
    margin: auto;

}

#notifications-facet .pbCard {
    display: block;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-top: 0.8rem;
    padding-bottom: 0.8rem;
}

#notifications-facet .pbCard>a {
    text-decoration: underline;
    margin-inline: 0.2em;
}

/* Generic card element for pillbug. This is some kind of rectangle that holds stuff. Doesn't define padding. */
.pbCard {
    border-color: hsl(var(--border));
    background-color: hsl(var(--card));
    color: hsl(var(--card-foreground));
    border-radius: var(--radius);

    overflow: hidden;
    text-overflow: ellipsis;
}

/* When used inside of a pbCard, ends after one line */
.pbSingleLineBlock {
    display: block;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

summary::marker {
    line-height: auto;
}

html.setting-alignColumnsLeft #layoutColumnsRoot {
    margin-left: 0px;
}

